# PullPilot

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose-build.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ghcr-publish.yml  security-audit.yml
backend/: login.html  main.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  main.jsx
server/: __init__.py  app.py  config.py  database.py  login_rate_limit.py
server/locale/: __init__.py  http.py  log_messages.py
server/models/: __init__.py  db.py  schemas.py
server/routers/: __init__.py  auth.py  projects.py  schedules.py  status.py
server/services/: __init__.py  docker.py  projects.py  scheduler.py  update_logs.py
server/templates/: login.html
tests/: conftest.py  test_api.py  test_log_messages.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  i18n.js  main.jsx
web/src/components/: Dashboard.jsx  Footer.jsx  Header.jsx  HistoryView.jsx  LogModal.jsx  ProgressBar.jsx  ProjectCard.jsx  ScheduleView.jsx
web/src/hooks/: usePolling.js
web/src/lib/: api.js  mockData.js
