[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pullpilot"
version = "1.0.0"
description = "PullPilot backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.120.4",
  "starlette==0.49.3",
  "uvicorn==0.27.0",
  "pydantic==2.5.3",
  "sqlalchemy==2.0.25",
  "apscheduler==3.10.4",
  "python-multipart==0.0.22",
  "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.setuptools.package-data]
server = ["templates/*.html"]

[tool.ruff]
target-version = "py311"
src = ["server", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "E501",
  "I001",
  "UP006",
  "UP022",
  "UP035",
  "UP045",
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
